// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableTable Renders with deleteModal 1`] = `
<div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <ReactTable
      TrComponent={[MockFunction]}
      columns={Array []}
      data={
        Array [
          Object {},
          Object {},
          Object {},
          Object {},
          Object {},
        ]
      }
      getTrProps={[Function]}
      loading={false}
      pageSize={5}
      showPagination={false}
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <ButtonGroup />
  </div>
</div>
`;

exports[`DraggableTable Renders with long data 1`] = `
<div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <ReactTable
      TrComponent={[MockFunction]}
      columns={Array []}
      data={
        Array [
          Object {},
          Object {},
          Object {},
          Object {},
          Object {},
        ]
      }
      getTrProps={[Function]}
      loading={false}
      pageSize={5}
      showPagination={false}
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <ButtonGroup />
  </div>
</div>
`;

exports[`DraggableTable Renders with snapshot 1`] = `
<div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <ReactTable
      TrComponent={[MockFunction]}
      columns={Array []}
      data={Array []}
      getTrProps={[Function]}
      loading={false}
      pageSize={5}
      showPagination={false}
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <ButtonGroup />
  </div>
</div>
`;

exports[`DraggableTable Renders with tableButton 1`] = `
<div>
  <div />
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  >
    <ReactTable
      TrComponent={[MockFunction]}
      columns={Array []}
      data={
        Array [
          Object {},
          Object {},
          Object {},
          Object {},
          Object {},
        ]
      }
      getTrProps={[Function]}
      loading={false}
      pageSize={5}
      showPagination={false}
    />
  </div>
  <div
    className="row justify-content-center"
  >
    <ButtonGroup />
  </div>
</div>
`;
